# alenats

./: .clang-format  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.MD  TESTING.md  alenats.cpp  alenats.h
.githooks/: pre-commit
.github/workflows/: quality.yml  test.yml
docs/adr/: 0001-testing-infrastructure.md  README.md
examples/: CMakeLists.txt  publish.cpp  request.cpp  subscribe.cpp
tests/: CMakeLists.txt  cluster_test.cpp  connection_manager_test.cpp  connection_pool_test.cpp  request_test.cpp  subscription_test.cpp  test_helpers.h  test_main.cpp  utils_test.cpp
